# Wearly

./: .gitignore  README.md  backend_api.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AttributesSection.tsx  ColorAnalysisSection.tsx  ResultsDisplay.tsx  StyleEvaluationPanel.tsx  SummaryCard.tsx  UploadSection.tsx  VisualizationPanel.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
ml/: Parsing_train.py  __init__.py  output.py  pretrained_parser.py  test.py
